# Goemon64Recomp-Android

./: .gitignore  .gitmodules  BUILDING.md  CLAUDE.md  CMakeLists.txt  N64ModernRuntime.patch  README.md  TODO.txt  aspMain.toml  aspMain.us.toml  build_debug.bat  build_release.bat  build_relwithdebinfo.bat  decompression_tlb_and_controller_pak_support.patch  launch.vs.json  mnsg.dump_context.toml  mnsg.toml  mnsg.us.toml  overlays.us.0.txt  patches.toml  recompcontrollerdb.txt  rt64.patch  split_rectangles.patch  tlb_and_controller_pak_support.patch
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/linux/: Goemon64Recompiled.desktop  appimage.sh
.github/macos/: Info.plist.in  apple_bundle.cmake  fixup_bundle.cmake
.github/scripts/: check-dual-src-blend.sh  test-dual-src-blend-guard.sh
.github/workflows/: android-release.yml  android.yml  validate-external.yml  validate-internal.yml  validate.yml
android/: build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
android-recomp/: CMakeLists.txt
android-ui-probe/: CMakeLists.txt
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/goemon64/recomp/: AssetInstaller.java  DataPaths.java  LauncherActivity.java  MainActivity.java  RestartActivity.java
android/app/src/main/res/layout/: activity_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
assets/: config_menu.rml  config_sub_menu.rml  launcher.rml  recomp.rcss
assets/config_menu/: cheats.rml  controls.rml  general.rml  graphics.rml  sound.rml
assets/scss/: package-lock.json  package.json
assets/scss/styles/components/: SubtitleTitle.scss
docs/: android-profiling-plan.md  android-profiling-results.md  autosave.md  code-review-2026-07-20-pass2.md  code-review-2026-07-20.md  code-review-2026-07-21-remediation.md
docs/input/: README.md  n64-goemon-input-assignment.csv
docs/re-notes/: README.md  RESUME-autosave.md  RESUME-mali-issue15.md  RESUME-mali-review.md  RESUME-menu-framerate.md  RESUME.md  goemon_basis_verify.md  goemon_character_swap_re.md  goemon_cheats_re.md  goemon_critic.md  goemon_default_cam_writer.md  goemon_global_camstate.md  goemon_math_helpers.md  goemon_overlay_scan.md  goemon_player_pos.md  goemon_save_re.md  goemon_trace_0800037C.md  menu-framerate-handover.md  vulkan_device_floor.md
docs/re-notes/fixtures/: README.md  menu-framerate-device-fence-timing.txt  menu-framerate-pair-enum.txt
docs/testing/: resume-stress.sh
flatpak/: README.md  io.github.klorfmorf.goemon64recomp.desktop  io.github.klorfmorf.goemon64recomp.json  io.github.klorfmorf.goemon64recomp.metainfo.xml
include/: goemon_config.h  goemon_debug.h  goemon_game.h  goemon_recomp.h  goemon_render.h  goemon_save_rollback.h  goemon_sound.h  goemon_support.h  ovl_patches.hpp  recomp_data.h  recomp_input.h  recomp_ui.h  trace.h  zelda_config.h  zelda_debug.h  zelda_game.h  zelda_render.h  zelda_sound.h
lib/SlotMap/: README.md
mods/: BUILTIN_MODS.md
patches/: Makefile  actor_funcs.h  anime.c  attack_move.c  attack_move.h  autosave.c  autosave.h  background.c  camera.c  camera.h  charswap.c  cheats.c  cheats.h  compile_flags.txt  custom_syms.toml  dummy.c  file.c  game_funcs.h  game_vars.h  graphics.h  impact_block_fix.s  init_patches.c  input.h  macros.h  main.c  misc_funcs.h  overlay_reloc.c  overlay_relocs.h  patch_api_funcs.h  patch_helpers.h  patches.h  pic.c  print.c  required.c  sasuke_bomb_fix.s  sched.c  sched.h  sound.c  sound.h  sound_funcs.h  (+6 more)
patches/keep/: player.c  sched.c  skybox.c
patches/libultra/: assert.h
src/game/: config.cpp  controls.cpp  debug.cpp  input.cpp  patch_api.cpp  quicksaving.cpp  recomp_api.cpp  recomp_data_api.cpp  rom_decompression.cpp  save_rollback.cpp  scene_table.cpp  tlb.cpp  unknown_symbols.cpp
src/main/: android_diag.cpp  android_glue.cpp  main.cpp  register_overlays.cpp  register_patches.cpp  rt64_render_context.cpp  support.cpp  support_apple.mm
src/ui/: ui_config.cpp  ui_launcher.cpp  ui_mod_menu.cpp  ui_prompt.cpp  ui_renderer.cpp  ui_saved_indicator.cpp  ui_state.cpp
